# ucsfomop-cli

./: Cargo.toml  README.md  bundle.sh
src/: main.rs
