[package]
name = "ucsfomop-cli"
version = "0.1.0"
edition = "2024"
authors = ["Wanjun Gu <wanjun.gu@ucsf.edu>"]

[[bin]]
name = "ucsfomop"
path = "src/main.rs"

[dependencies]
odbc-api = "8"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
anyhow = "1"
csv = "1"
rand = "0.8"
regex = "1"
